<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/colorId"
        android:icon="@drawable/color_pallete"
        android:title="@string/color"
        app:showAsAction="always" />
    <item
        android:id="@+id/saveId"
        android:icon="@drawable/save_icon"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/lineWidthId"
        android:icon="@drawable/stroke_width"
        android:title="@string/line_width"
        app:showAsAction="always" />
    <item
        android:id="@+id/deleteId"
        android:icon="@drawable/delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>