<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorDialogGridlayout"
    android:orientation="vertical"
    android:useDefaultMargins="true"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="6"
    android:columnCount="2">

    <TextView
        android:id="@+id/alphaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:text="@string/alpha" />

    <SeekBar
        android:id="@+id/alphaSeekBar"
        android:layout_column="1"
        android:layout_row="0"
        android:max="255"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/redTextView"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="right|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red" />

    <SeekBar
        android:id="@+id/redSeekBar"
        android:layout_column="1"
        android:layout_row="1"
        android:max="255"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/greenTextView"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="center|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green" />

    <SeekBar
        android:id="@+id/greenSeekBar"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_gravity="fill_horizontal"
        android:max="255"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/blueTextView"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="right|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue" />

    <SeekBar
        android:id="@+id/blueSeekBar"
        android:layout_column="1"
        android:layout_row="3"
        android:max="255"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/colorView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal" />
    <Button
        android:id="@+id/setColorButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:text="@string/set_color" />
</GridLayout>